@@ -5,7 +5,7 @@
 void* memchr(const void *s, int c, size_t n) {
   const unsigned char *pc = (unsigned char *) s;
   for (;n--;pc++)
-    if (*pc == c)
+    if (*pc == (unsigned char)c)
       return ((void *) pc);
   return 0;
 }
